Kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: guillermogomez
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guillermogomez
      component: dbservice
  template:
    metadata:
      labels:
        app: guillermogomez
        component: dbservice
    spec:
      volumes:
      - name: db-pv-storage
        persistentVolumeClaim:
          claimName: db-pvc
      containers:
      - name: dbservice
        image: mysql:5.5.62
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: db-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-serve
  labels:
    app: guillermogomez
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql-serve-port
  selector:
    component: dbservice
    type: NodePort
