Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gamesinfo-ingress
  labels:
    app: guillermogomez
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 tls:
   - hosts:
     - games.info
     secretName: games.info
 rules:
 - host: games.info
   http:
     paths:
     - path: /
       backend:
         serviceName: web-serve
         servicePort: 8443
